@@ -1,16 +1,17 @@
 package edu.fiuba.algo3.entrega_1;
 
-import edu.fiuba.algo3.modelo.jugador.Jugador;
-import edu.fiuba.algo3.modelo.pregunta.Clasica;
-import edu.fiuba.algo3.modelo.pregunta.ConPenalidad;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
-import edu.fiuba.algo3.modelo.pregunta.PreguntaMultipleChoice;
 import edu.fiuba.algo3.modelo.respuesta.Respuesta;
+import edu.fiuba.algo3.modelo.pregunta.MultipleChoice;
+import edu.fiuba.algo3.modelo.distribuidoraDePuntaje.Clasica;
+import edu.fiuba.algo3.modelo.distribuidoraDePuntaje.ConPenalidad;
+import edu.fiuba.algo3.modelo.jugador.Jugador;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -18,6 +19,14 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class MultipleChoiceTest {
     private Jugador jugador1;
     private Jugador jugador2;
+    private static Clasica clasica;
+    private static ConPenalidad conPenalidad;
+
+    @BeforeAll
+    public static void setUpClass() {
+        clasica=new Clasica();
+        conPenalidad=new ConPenalidad();
+    }
 
     @BeforeEach
     public void setUp() {
@@ -34,17 +43,15 @@ public class MultipleChoiceTest {
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaMultipleChoice(
-            "¿Cuáles de las siguientes opciones son correctas?", 
-            Arrays.asList("Opcion 1","Opcion 2", "Opcion 3"), 
-            Arrays.asList("Opcion 1","Opcion 2"),
-            new Clasica()
+        Pregunta pregunta = new MultipleChoice(
+            "¿Cuáles de las siguientes opciones son correctas?",
+                Arrays.asList("Opcion 1","Opcion 2"), clasica, Arrays.asList("Opcion 1","Opcion 2", "Opcion 3")
         );
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
-        assertEquals(1, jugador1.obtenerPuntos());
-        assertEquals(1, jugador2.obtenerPuntos());
+        assertEquals(1, jugador1.obtenerPuntaje());
+        assertEquals(1, jugador2.obtenerPuntaje());
     }
 
     @Test
@@ -56,39 +63,35 @@ public class MultipleChoiceTest {
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaMultipleChoice(
-            "¿Cuáles de las siguientes opciones son correctas?", 
-            Arrays.asList("Opcion 1","Opcion 2", "Opcion 3"), 
-            Arrays.asList("Opcion 1","Opcion 2"),
-            new Clasica()
+        Pregunta pregunta = new MultipleChoice(
+            "¿Cuáles de las siguientes opciones son correctas?",
+                Arrays.asList("Opcion 1","Opcion 2"), clasica, Arrays.asList("Opcion 1","Opcion 2", "Opcion 3")
         );
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
-        assertEquals(0, jugador1.obtenerPuntos());
-        assertEquals(0, jugador2.obtenerPuntos());
+        assertEquals(0, jugador1.obtenerPuntaje());
+        assertEquals(0, jugador2.obtenerPuntaje());
     }
 
     @Test
     public void test03MultipleChoiceConPenalidadAsignaPuntajeCorrectoAJugadoresQueRespondieronCorrectamente() {
         Respuesta respuesta1 = new Respuesta(Arrays.asList("Opcion 1","Opcion 2"), jugador1);
-        Respuesta respuesta2 = new Respuesta(Arrays.asList("Opcion 1","Opcion 2"), jugador2);
+        Respuesta respuesta2 = new Respuesta(List.of("Opcion 1"), jugador2);
 
         List<Respuesta> respuestas = new ArrayList<>();
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaMultipleChoice(
-            "¿Cuáles de las siguientes opciones son correctas?", 
-            Arrays.asList("Opcion 1","Opcion 2", "Opcion 3"), 
-            Arrays.asList("Opcion 1","Opcion 2"),
-            new ConPenalidad()
+        Pregunta pregunta = new MultipleChoice(
+            "¿Cuáles de las siguientes opciones son correctas?",
+                Arrays.asList("Opcion 1","Opcion 2"), conPenalidad, Arrays.asList("Opcion 1","Opcion 2", "Opcion 3")
         );
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
-        assertEquals(2, jugador1.obtenerPuntos());
-        assertEquals(2, jugador2.obtenerPuntos());
+        assertEquals(2, jugador1.obtenerPuntaje());
+        assertEquals(1, jugador2.obtenerPuntaje());
     }
 
     @Test
@@ -100,16 +103,14 @@ public class MultipleChoiceTest {
         respuestas.add(respuesta1);
         respuestas.add(respuesta2);
 
-        Pregunta pregunta = new PreguntaMultipleChoice(
-            "¿Cuáles de las siguientes opciones son correctas?", 
-            Arrays.asList("Opcion 1","Opcion 2", "Opcion 3", "Opcion 4"), 
-            Arrays.asList("Opcion 1","Opcion 2"),
-            new ConPenalidad()
+        Pregunta pregunta = new MultipleChoice(
+            "¿Cuáles de las siguientes opciones son correctas?",
+                Arrays.asList("Opcion 1","Opcion 2"), conPenalidad, Arrays.asList("Opcion 1","Opcion 2", "Opcion 3", "Opcion 4", "Opcion 5")
         );
 
-        pregunta.validarRespuestas(respuestas);
+        pregunta.asignarPuntajes(respuestas);
 
-        assertEquals(-2, jugador1.obtenerPuntos());
-        assertEquals(-2, jugador2.obtenerPuntos());
+        assertEquals(-2, jugador1.obtenerPuntaje());
+        assertEquals(-2, jugador2.obtenerPuntaje());
     }
 }
